Fix Menu images clipping outside it's card

--- a/src/style.css
+++ b/src/style.css
@@ -216,6 +216,11 @@ h2 {
   border-radius: 10px;
 }
 
+.menu-item > img {
+  max-height: 100%;
+  object-fit: contain;
+}
+
 .item-name,
 .item-price {
   font-size: 1rem;
